fixed spacing from content to footer by added a margin of $spacer-sm (0.5rem) to the top of it

--- a/src/stylesheets/components/footer/_footer.scss
+++ b/src/stylesheets/components/footer/_footer.scss
@@ -6,6 +6,7 @@
   flex: none;
   justify-content: center;
   text-align: center;
+  margin-top: $spacer-sm;
 
   .footer__social {
     display: flex;
